--- a/app/src/main/res/layout/fragment_ing_personales.xml
+++ b/app/src/main/res/layout/fragment_ing_personales.xml
@@ -8,9 +8,6 @@
     tools:context=".OpcionIngreso.Normal.IngPersonales"
     android:background="@color/FondoTerciario">
 
-    <!-- TODO: Update blank fragment layout -->
-
-
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
@@ -165,28 +162,30 @@
 
                 <ImageButton
                     android:id="@+id/fecha_dp"
-                    android:layout_width="411dp"
-                    android:layout_height="42dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="8dp"
-                    android:layout_weight="1"
+                    android:layout_weight="0.7"
                     android:background="@color/FondoSecundario"
                     android:src="@drawable/icono_citas" />
 
                 <Space
-                    android:layout_width="20dp"
-                    android:layout_height="match_parent" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.9" />
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="402dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                    android:layout_weight="0.3">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/fecha_persona"
-                        android:layout_width="180dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.5"
-                        android:hint="Fecha" />
+                        android:editable="false"
+                        android:hint="Fecha"
+                        tools:ignore="Deprecated" />
                 </android.support.design.widget.TextInputLayout>
 
 
