--- a/app/src/main/res/layout/fragment_ingreso_pagos_visitas.xml
+++ b/app/src/main/res/layout/fragment_ingreso_pagos_visitas.xml
@@ -38,16 +38,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp" />
 
-            <android.support.design.widget.TextInputLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/descPagos"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/tituloGasto"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="Descripcion" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_weight="1"
+                    android:background="@color/AzulOscuro"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Gastos:"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/totalGasto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="00.00"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
             <Space
                 android:layout_width="match_parent"
@@ -84,6 +98,22 @@
                         tools:ignore="Deprecated" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/descPagos"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Descripcion" />
+            </android.support.design.widget.TextInputLayout>
+
 
             <Space
                 android:layout_width="match_parent"
@@ -169,6 +199,35 @@
                     </TableLayout>
                 </HorizontalScrollView>
             </ScrollView>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tituloAbono"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/AzulOscuro"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Abono:"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/totalAbono"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="00.00"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
