--- a/app/src/main/res/layout/fragment_ingreso_visitas.xml
+++ b/app/src/main/res/layout/fragment_ingreso_visitas.xml
@@ -80,7 +80,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:editable="false"
-                        android:hint="Terapia Completa"
+                        android:hint="Fecha"
                         tools:ignore="Deprecated" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
@@ -154,6 +154,36 @@
                     </TableLayout>
                 </HorizontalScrollView>
             </ScrollView>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tituloGasto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/AzulOscuro"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Costos:"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/totalGasto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="00.00"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
