--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -7,53 +7,229 @@
     tools:context=".OpcionInicio.Inicio"
     android:background="@color/FondoPrincipal">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="340dp"
+        android:background="@color/FondoSecundario">
+
+        <ImageView
+            android:id="@+id/imagenPerfil"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="86dp"
+            android:src="@drawable/logonuevo" />
+
+        <TextView
+            android:id="@+id/usuarioPerfil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="230dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="Clinica San Jose"
+            android:textColor="@color/Blanco"
+            android:textSize="28sp" />
+
+    </RelativeLayout>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="320dp"
+        android:layout_height="120dp"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_marginTop="10dp"
+        app:cardBackgroundColor="@color/AzulOscuro"
+        app:cardCornerRadius="6dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="3">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/fichasNormales"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Fichas Normales"
+                    android:textColor="@color/Blanco"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/contadorFN"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="125"
+                    android:textColor="@color/Blanco"
+                    android:textSize="28sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/totalPacientes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Total Pacientes"
+                    android:textColor="@color/Blanco"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/contadorPac"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="125"
+                    android:textColor="@color/Blanco"
+                    android:textSize="28sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/fichasEspeciales"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Fichas Especiales"
+                    android:textColor="@color/Blanco"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/contadorFE"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="125"
+                    android:textColor="@color/Blanco"
+                    android:textSize="28sp" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+    
+    <LinearLayout
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="170dp"
+        android:orientation="vertical"
+        android:layout_gravity="center">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="320dp"
-                android:background="@color/AzulOscuro">
+                android:layout_height="32dp"
+                android:orientation="horizontal"
+                android:weightSum="3">
 
                 <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="120dp"
-                    android:layout_marginTop="80dp"
-                    android:layout_marginRight="120dp"
-                    android:layout_marginBottom="80dp"
-                    android:background="@drawable/circle"
-                    android:src="@drawable/ic_correo" />
+                    android:layout_weight="0.5"
+                    android:src="@drawable/ic_correo"/>
 
                 <TextView
-                    android:id="@+id/usuarioPerfil"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginTop="260dp"
-                    android:layout_marginRight="30dp"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="Clinica San Jose"
+                    android:id="@+id/correo"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2.5"
+                    android:text="lucy@gmail.com"
                     android:textColor="@color/Blanco"
-                    android:textSize="24sp" />
+                    android:gravity="center_vertical"
+                    android:textSize="18sp"/>
 
-            </FrameLayout>
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:orientation="horizontal"
+                android:weightSum="3">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5"
+                    android:src="@drawable/icono_citas"/>
+
+                <TextView
+                    android:id="@+id/citasPendientes"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2.5"
+                    android:text="3 Citas Pendietes"
+                    android:textColor="@color/Blanco"
+                    android:gravity="center_vertical"
+                    android:textSize="18sp"/>
+
+            </LinearLayout>
+
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                app:cardBackgroundColor="@color/AzulOscuro"
+                app:cardCornerRadius="4dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/cerrar"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:textSize="24dp"
+                        android:textColor="@color/Blanco"
+                        android:text="Cerrar Sesion"/>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
 
         </LinearLayout>
-    </ScrollView>
 
+    </LinearLayout>
+    
 </FrameLayout>
