--- a/app/src/main/res/menu/opciones_tool_inicio.xml
+++ b/app/src/main/res/menu/opciones_tool_inicio.xml
@@ -7,8 +7,8 @@
         app:showAsAction="ifRoom"
         android:title="editar" />
 
-    <item android:id="@+id/action_logout"
-        android:icon="@drawable/ic_cerrar"
+    <item android:id="@+id/action_configurar"
+        android:icon="@drawable/ic_configurar"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
         android:title="salir" />
