--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -22,160 +22,159 @@
         android:adjustViewBounds="false"
         app:srcCompat="@drawable/logogrande" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25mm"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2mm"
+            android:layout_marginLeft="2mm"
+            android:text="LOGIN"
+            android:textColor="@color/Blanco"
+            android:textSize="32sp"
+            android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3mm"
+                android:layout_marginLeft="2mm"
+                android:layout_marginRight="2mm"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="35mm"
+                    android:layout_height="10mm"
+                    android:layout_weight="5"
+                    app:srcCompat="@drawable/ic_correo"
+                    tools:ignore="VectorDrawableCompat" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/correo"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="Correo Electronico"
+                        android:inputType="textEmailAddress" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+    </LinearLayout>
+
     <!--    <TextView-->
-<!--        android:id="@+id/titulo_version"-->
-<!--        android:layout_width="168dp"-->
-<!--        android:layout_height="113dp"-->
-<!--        android:text="v2.0"-->
-<!--        android:textColor="@color/Blanco"-->
-<!--        android:textSize="18sp" />-->
+    <!--        android:id="@+id/titulo_version"-->
+    <!--        android:layout_width="168dp"-->
+    <!--        android:layout_height="113dp"-->
+    <!--        android:text="v2.0"-->
+    <!--        android:textColor="@color/Blanco"-->
+    <!--        android:textSize="18sp" />-->
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="277dp"-->
-<!--        android:orientation="vertical">-->
-<!--    </LinearLayout>-->
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal">-->
 
-<!--        <ImageView-->
-<!--            android:id="@+id/imageView4"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_weight="1"-->
-<!--            app:srcCompat="@drawable/ic_correo"-->
-<!--            tools:ignore="VectorDrawableCompat" />-->
 
-<!--        <android.support.design.widget.TextInputLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1">-->
+    <!--    <LinearLayout-->
+    <!--        android:id="@+id/linearLayout3"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginStart="16dp"-->
+    <!--        android:layout_marginLeft="16dp"-->
+    <!--        android:layout_marginTop="16dp"-->
+    <!--        android:layout_marginEnd="16dp"-->
+    <!--        android:layout_marginRight="16dp"-->
+    <!--        android:layout_marginBottom="8dp"-->
+    <!--        android:orientation="horizontal"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/view"-->
+    <!--        app:layout_constraintVertical_bias="0.38">-->
 
-<!--            <android.support.design.widget.TextInputEditText-->
-<!--                android:id="@+id/correo"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:hint="Correo Electronico"-->
-<!--                android:inputType="textEmailAddress" />-->
-<!--        </android.support.design.widget.TextInputLayout>-->
-<!--    </LinearLayout>-->
+    <!--        <ImageView-->
+    <!--            android:id="@+id/imageView6"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:layout_weight="1"-->
+    <!--            app:srcCompat="@drawable/ic_lock"-->
+    <!--            tools:ignore="VectorDrawableCompat" />-->
 
-<!--    <LinearLayout-->
-<!--        android:id="@+id/linearLayout3"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:layout_marginLeft="16dp"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:layout_marginEnd="16dp"-->
-<!--        android:layout_marginRight="16dp"-->
-<!--        android:layout_marginBottom="8dp"-->
-<!--        android:orientation="horizontal"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/view"-->
-<!--        app:layout_constraintVertical_bias="0.38">-->
+    <!--        <android.support.design.widget.TextInputLayout-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="1"-->
+    <!--            app:passwordToggleEnabled="true">-->
 
-<!--        <ImageView-->
-<!--            android:id="@+id/imageView6"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_weight="1"-->
-<!--            app:srcCompat="@drawable/ic_lock"-->
-<!--            tools:ignore="VectorDrawableCompat" />-->
+    <!--            <android.support.design.widget.TextInputEditText-->
+    <!--                android:id="@+id/pass"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="match_parent"-->
+    <!--                android:hint="Contraseña"-->
+    <!--                android:inputType="textPassword" />-->
+    <!--        </android.support.design.widget.TextInputLayout>-->
+    <!--    </LinearLayout>-->
 
-<!--        <android.support.design.widget.TextInputLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            app:passwordToggleEnabled="true">-->
+    <!--    <Button-->
+    <!--        android:id="@+id/aceptador"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginStart="32dp"-->
+    <!--        android:layout_marginLeft="32dp"-->
+    <!--        android:layout_marginTop="8dp"-->
+    <!--        android:layout_marginEnd="32dp"-->
+    <!--        android:layout_marginRight="32dp"-->
+    <!--        android:layout_marginBottom="8dp"-->
+    <!--        android:background="@drawable/boton"-->
+    <!--        android:elevation="2dp"-->
+    <!--        android:text="LOGIN"-->
+    <!--        android:textSize="20sp"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="0.0"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"-->
+    <!--        app:layout_constraintVertical_bias="0.231" />-->
 
-<!--            <android.support.design.widget.TextInputEditText-->
-<!--                android:id="@+id/pass"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:hint="Contraseña"-->
-<!--                android:inputType="textPassword" />-->
-<!--        </android.support.design.widget.TextInputLayout>-->
-<!--    </LinearLayout>-->
+    <!--    <CheckBox-->
+    <!--        android:id="@+id/recordar"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginStart="8dp"-->
+    <!--        android:layout_marginLeft="8dp"-->
+    <!--        android:layout_marginTop="8dp"-->
+    <!--        android:layout_marginEnd="8dp"-->
+    <!--        android:layout_marginRight="8dp"-->
+    <!--        android:layout_marginBottom="8dp"-->
+    <!--        android:text="Recordar Mi Cuenta"-->
+    <!--        android:textColor="@color/Blanco"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="0.498"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/aceptador"-->
+    <!--        app:layout_constraintVertical_bias="0.15" />-->
 
-<!--    <Button-->
-<!--        android:id="@+id/aceptador"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="32dp"-->
-<!--        android:layout_marginLeft="32dp"-->
-<!--        android:layout_marginTop="8dp"-->
-<!--        android:layout_marginEnd="32dp"-->
-<!--        android:layout_marginRight="32dp"-->
-<!--        android:layout_marginBottom="8dp"-->
-<!--        android:background="@drawable/boton"-->
-<!--        android:elevation="2dp"-->
-<!--        android:text="LOGIN"-->
-<!--        android:textSize="20sp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"-->
-<!--        app:layout_constraintVertical_bias="0.231" />-->
 
-<!--    <CheckBox-->
-<!--        android:id="@+id/recordar"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="8dp"-->
-<!--        android:layout_marginLeft="8dp"-->
-<!--        android:layout_marginTop="8dp"-->
-<!--        android:layout_marginEnd="8dp"-->
-<!--        android:layout_marginRight="8dp"-->
-<!--        android:layout_marginBottom="8dp"-->
-<!--        android:text="Recordar Mi Cuenta"-->
-<!--        android:textColor="@color/Blanco"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.498"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/aceptador"-->
-<!--        app:layout_constraintVertical_bias="0.15" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/titulo_inicio"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="8dp"-->
-<!--        android:layout_marginLeft="8dp"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:layout_marginEnd="8dp"-->
-<!--        android:layout_marginRight="8dp"-->
-<!--        android:text="LOGIN"-->
-<!--        android:textColor="@color/Blanco"-->
-<!--        android:textSize="32sp"-->
-<!--        android:textStyle="bold"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.026"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/view" />-->
-
-<!--    <ImageView-->
-<!--        android:id="@+id/imageView3"-->
-<!--        android:layout_width="115dp"-->
-<!--        android:layout_height="52dp"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:layout_marginLeft="16dp"-->
-<!--        android:layout_marginEnd="8dp"-->
-<!--        android:layout_marginRight="8dp"-->
-<!--        android:layout_marginBottom="16dp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/titulo_version"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:srcCompat="@drawable/firmacompleta" />-->
-
+    <!--    <ImageView-->
+    <!--        android:id="@+id/imageView3"-->
+    <!--        android:layout_width="115dp"-->
+    <!--        android:layout_height="52dp"-->
+    <!--        android:layout_marginStart="16dp"-->
+    <!--        android:layout_marginLeft="16dp"-->
+    <!--        android:layout_marginEnd="8dp"-->
+    <!--        android:layout_marginRight="8dp"-->
+    <!--        android:layout_marginBottom="16dp"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toStartOf="@+id/titulo_version"-->
+    <!--        app:layout_constraintHorizontal_bias="0.0"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:srcCompat="@drawable/firmacompleta" />-->
 
 
 </FrameLayout>
