--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -18,7 +18,7 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:layout_marginTop="1mm"
+        android:layout_marginTop="8dp"
         android:adjustViewBounds="false"
         app:srcCompat="@drawable/logogrande" />
 
@@ -47,8 +47,8 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="35mm"
-                android:layout_height="10mm"
+                android:layout_width="220dp"
+                android:layout_height="55dp"
                 android:layout_weight="5"
                 app:srcCompat="@drawable/ic_code_user"
                 tools:ignore="VectorDrawableCompat" />
@@ -70,14 +70,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2mm"
-            android:layout_marginTop="3mm"
-            android:layout_marginRight="2mm"
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="13dp"
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="35mm"
-                android:layout_height="10mm"
+                android:layout_width="220dp"
+                android:layout_height="55dp"
                 android:layout_weight="5"
                 app:srcCompat="@drawable/ic_correo"
                 tools:ignore="VectorDrawableCompat" />
@@ -99,14 +99,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2mm"
-            android:layout_marginTop="3mm"
-            android:layout_marginRight="2mm"
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginRight="13dp"
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="35mm"
-                android:layout_height="10mm"
+                android:layout_width="220dp"
+                android:layout_height="58dp"
                 android:layout_weight="5"
                 app:srcCompat="@drawable/ic_lock"
                 tools:ignore="VectorDrawableCompat" />
@@ -126,15 +126,78 @@
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
+
+        <!--        <LinearLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:orientation="horizontal"-->
+        <!--            android:gravity="center_horizontal"-->
+        <!--            android:layout_gravity="center_horizontal">-->
+
+        <!--            <CheckBox-->
+        <!--                android:id="@+id/recordar"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_gravity="center"-->
+        <!--                android:text="Recordar Mi Cuenta"-->
+        <!--                android:textColor="@color/Blanco" />-->
+
+        <!--        </LinearLayout>-->
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="13dp"
+            android:gravity="center">
+
+            <CheckBox
+                android:id="@+id/recordar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Recordar mi cuenta"
+                android:textColor="@color/Blanco" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/aceptador"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="13dp"
+            android:background="@drawable/boton"
+            android:elevation="2dp"
+            android:text="Ingresar"
+            android:textSize="20sp" />
     </LinearLayout>
 
-    <!--    <TextView-->
-    <!--        android:id="@+id/titulo_version"-->
-    <!--        android:layout_width="168dp"-->
-    <!--        android:layout_height="113dp"-->
-    <!--        android:text="v2.0"-->
-    <!--        android:textColor="@color/Blanco"-->
-    <!--        android:textSize="18sp" />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="13dp"
+        android:layout_marginRight="13dp"
+        android:layout_marginBottom="25dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="115dp"
+            android:layout_height="52dp"
+            app:srcCompat="@drawable/firmacompleta" />
+
+        <TextView
+            android:id="@+id/titulo_version"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="v2.0"
+            android:gravity="center_vertical|right"
+            android:textColor="@color/Blanco"
+            android:textSize="20dp" />
+    </LinearLayout>
 
 
     <!--    <Button-->
